--- a/style.css
+++ b/style.css
@@ -34,11 +34,19 @@ p {
 }
 
 /* Basic Layout */
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: lightgrey;
+}
+
 .container {
-  width: 75%;
+  width: 50%;
   max-width: 1440px;
   margin: 0 auto;
-  padding-top: 120px;
+  padding-top: 80px;
 }
 
 /* Header Section */
@@ -46,7 +54,8 @@ header {
   display: flex;
   padding: 20px 0px;
   background: var(--color-neutral-white);
-  /* backdrop-filter: blur(50px); */
+  backdrop-filter: blur(50px);
+  background-color: hsla(0, 0%, 100%, 4%);
   box-shadow: 0 2px 4px var(--color-box-shadow);
   cursor: default;
 }
@@ -55,4 +64,52 @@ header img {
   width: 10%;
   height: auto;
   margin: 0 auto;
+}
+
+.notice {
+  border: 1px solid darkgray;
+  padding: 12px 24px;
+  width: fit-content;
+  border-radius: 24px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-content {
+  padding: 80px 0px;
+  text-align: center;
+}
+
+
+.main-content h1 {
+  margin-bottom: 8px;
+}
+
+h1:nth-of-type(2n) {
+  margin-top: 40px;
+}
+
+/* Contact Section */
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.contact-card {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 16px 32px;
+  align-items: center;
+  background-color: gainsboro;
+  border-radius: 8px;
+}
+
+footer {
+  padding: 0px 0px 16px 0px;
+  text-align: center;
+  margin-top: auto;
 }
